cmake_minimum_required(VERSION 3.13)

########################################################################################################################

project(fty-asset-activator
    VERSION 1.0.0
    LANGUAGES CXX
)

########################################################################################################################
find_package(fty-cmake PATHS ${CMAKE_BINARY_DIR}/fty-cmake)
########################################################################################################################

add_subdirectory(lib)
add_subdirectory(cli)

##############################################################################################################


##############################################################################################################
